# serializer version: 1
# name: test_setcover_sparse_emits_golden[bf16_activation]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_SPAML0_A_S_UserArgs_MT32x35DbPmPoce_kAmPrHIrSwCBKKS6kKXAgX_6aVw97ZM50=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_SPAML0_A_S_UserArgs_MT32x3iyVOFN50YXeupq5E_el8ozcjZZAkuBSnZnEw8r4wqs0=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_sparse_emits_golden[bf16_gate_r]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_FDMN_SPBML0_A_S_SAV_G22W03kmhpMSzLzrzMEMCruIPOKM7aEYpoUgE09SM8Ss=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_FDMN_SPBML0_A_S_SAV_GM7FV80q5ZXhv9EAsiU03OF_in-GOG_7LeC2F6roJDKw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_FDMN_SPBML0_A_S_SAV_GVouguULtU_3MWZknKxU0llox15TuZVBpmaaF2LnS8Pw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_FDMN_SPBML0_A_S_SAV_GgfEio6tiRxma5VJoMjRyncyMB0TYDD5nNH-J3p954CY=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_sparse_emits_golden[f8_gate_r]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8SS_BH_Bias_FDMN_SPBML0_A_S_SAV_D2p9cOO_oE-gUUyP2A2TMyey4hNt2KA5keBLKPZ0lxk=',
      'err': -2,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8SS_BH_Bias_FDMN_SPBML0_A_S_SAV_X2tbBC6o4-3U-o0XTKDe_z52ufLmGlNeh9qkWs4gj7o=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8SS_BH_Bias_FDMN_SPBML0_A_S_SAV_ah1D5nKa2gma8ranj-Hn80J1pKMA7GE2oNkCSanKisM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8SS_BH_Bias_FDMN_SPBML0_A_S_SAV_nvQf0PIUXXJSjEQ_K2LPx4jl7lMGFwFpeYyvJLpQQG8=',
      'err': -2,
    }),
  ])
# ---
# name: test_setcover_sparse_emits_golden[fp16_gate_r]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HHS_BH_Bias_FDMN_SPBML0_A_S_SAV_GL8jldsI5VEYCP8BIQs1FzOa6LZYxokIaGVwRJmfYw14=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HHS_BH_Bias_FDMN_SPBML0_A_S_SAV_GTblhRXIGFIwTN7IekI1Kt_W9TbXxrYXZVc1hiKDNpP8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HHS_BH_Bias_FDMN_SPBML0_A_S_SAV_GdwKPqOVZquCcqYNPah4oP-seYBwBfrN90HsYVQwwRig=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HHS_BH_Bias_FDMN_SPBML0_A_S_SAV_Gzq4SjDO3BkSLvxIelp7PjXxRt8OxBpMdh4lrX6gk4Bg=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_sparse_emits_golden[i8_activation]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_I8I8S_BH_SPAML0_A_S_UserArgs_MT32Nj3gSsFHBJfqTqsdrdAoSwaqtqsUb2mz-q6Y-m7tj0Y=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_sparse_emits_golden[spmm_bf8n]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_B8NB8NS_BH_Bias_FDMN_SPAML0_A_S_SDvRHZJWS0MCvfdpi3k25twgIXdHnmX9o5mGqJiFpWYY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B8NB8NS_BH_Bias_FDMN_SPAML0_A_S_STnTn-mdx_YYcujaPBxduYbL0p6yRZbiTxCXo20RpIB4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B8NB8NS_BH_Bias_FDMN_SPAML0_A_S_SiB9WdvGGsEh9H37PEx82iI5Bu_2iYwg3Jm4spUQjUGQ=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_sparse_emits_golden[spmm_dtl]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8I8S_BH_Bias_FDMN_SPAML0_A_S_SAV-Stkk8bJacCrMJrkjrR9wlhC7IHoozO96Sx1miYUCpw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8I8S_BH_Bias_FDMN_SPAML0_A_S_SAVAwNf_5xAkN2ySQjvhA3JQrB6uCX5nlJQg6qBIIyESX0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8I8S_BH_Bias_FDMN_SPAML0_A_S_SAVBSnFMAJdw8oCqEbnVGlQ91mPkY02QGalQtqmUf58EKg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8I8S_BH_Bias_FDMN_SPAML0_A_S_SAVTxOzMKxLOJtoU0ZUDonsJ7uLau0iUzieIUoK9IfcmmE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8I8S_BH_Bias_FDMN_SPAML0_A_S_SAVdxNrWon9tTP63_XKiE5jE_wCE3Fil9g3ch_JfebdifI=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_sparse_emits_golden[spmm_fp16_mi16]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HHS_BH_Bias_FDMN_SPAML0_A_S_SAV_UhfLkvLmN1RIsxhm9aC63eGzHUGWHUA_jbep-7c6MqgQ=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_sparse_emits_golden[spmm_fp16_ml1]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HHS_BH_SPAML1_UserArgs_MT16x16x64NG6mbEpI5z9QRfaYkyUvgbkKTFXOR1FgipSKz4b5Gu4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HHS_BH_SPAML1_UserArgs_MT64x64x64gsCIvn4AfaIX1rV0JYJ327dqf3IO42jieUSrq-3xod0=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_sparse_emits_golden[spmm_i8_mi16]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8I8S_BH_Bias_FDMN_SPAML0_A_S_SAVOD0M56fbJkORf-wjzaBy86-hrJIlVgI5jhI9lSOTXQ8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8I8S_BH_Bias_FDMN_SPAML0_A_S_SAVuvV87L2s4TOkQCZxbDnCSXGrZqWuLvBUaHrD96AAMV8=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_sparse_emits_golden[spmm_i8is]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_I8IS_BH_Bias_S_FDMN_SPAML0_A_S_SAEOlpVN2RlWQlV7wBCaFG8eEo-kVczjE2djCkGYslvOs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_I8IS_BH_Bias_S_FDMN_SPAML0_A_S_SAZ9wS76_IuNs8kVNXwKwqheIKUgDGFwlBK_OfCf25tU0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_I8IS_BH_Bias_S_FDMN_SPAML0_A_S_SApKQKxZ1AsuNKtOeQZKNH2c1pYMiDLqREJX3Ia2z0v2w=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_sparse_emits_golden[spmm_ldstr]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HHS_BH_Bias_FDMN_SPAML0_A_S_SAV_U000ApsPT6BAZJ-LYZHQRmjNc0C3G8KS9tiKrqgSOLwo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HHS_BH_Bias_FDMN_SPAML0_A_S_SAV_U3RClnl3531IQclN2UY7ktF-3N4_vauGKni3N3ors7rc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HHS_BH_Bias_FDMN_SPAML0_A_S_SAV_U9tzYLZ5sUjHQm6gh_tXaMqL1DttlRTqzs6aKsUGAPi4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HHS_BH_Bias_FDMN_SPAML0_A_S_SAV_UBtPHrO7LwKVRiAXEDBlPnu3vbEAA6T7825k4lfaDXQ0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HHS_BH_Bias_FDMN_SPAML0_A_S_SAV_UEhH60ABjx3PnhkyRpAwj6DBzVVTWys5BQ9LRioTQFhM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HHS_BH_Bias_FDMN_SPAML0_A_S_SAV_UMzKNouIqFc1pz2JJcD-cCibtAl5AANwcWcignsvuCVk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HHS_BH_Bias_FDMN_SPAML0_A_S_SAV_UUITpFZN_J5Z4G3r3wp_PJUDK_eBfndbNmRX6ZRP2HOY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HHS_BH_Bias_FDMN_SPAML0_A_S_SAV_UqR79s0OZwHVmeMJp6WvLw9xDLEsiRkSsYyHIc_wneQc=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_sparse_emits_golden[spmm_tdm_all]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_SPAML0_UserArgs_MT32x32x12AWkSC8ZNCCgT7faLBCCaDV1NJUa0xTomHwH1SF06Jh4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_SPAML0_UserArgs_MT32x32x64hFw1_3DWxEt8822JPz5QVq-Lgepfs0eFlt6R0jCpn-A=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_SPAML0_UserArgs_MT64x64x12nnXJhi_56ldFMkrtWhef2LpVUEY-yEwLw2acECSQYdQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_SPAML0_UserArgs_MT64x64x64kHdO2eWII5ksiJxZPoPcUllOyNhLA3BwFt2DJGtIOVY=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_sparse_emits_golden[spmm_tdm_gl2prefetch]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_SPAML0_UserArgs_MT32x32x12BPPGajomjXvVPvubn6IGaZyStCcVEaRoemrLwAm6gY8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_SPAML0_UserArgs_MT32x32x12IJgjQXOh9akyEa8tcDr6PBHX7shz4Elk2S-Cl5KAHQo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_SPAML0_UserArgs_MT32x32x64WtsoS_mplfTpcJhWFG-m0pqeVbe3r4oNDb1lFCJzHBo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_SPAML0_UserArgs_MT32x32x64sfd6zQczEg_Mo1Q9HxqLJwStBw0pAfJew2PvUhBI0cI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_SPAML0_UserArgs_MT64x64x12GKavyf4QUmINOT8t2VeLsLBIBTBsY7cbWymYTbFrS7o=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_SPAML0_UserArgs_MT64x64x12rVOMzFWLdlY0EbAlYzeAgTAullrCtdQ29GCGNqohqkk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_SPAML0_UserArgs_MT64x64x64AJTCpMOEItFVElFOsrHT9GydaaWD-K2L-resvZoq1qY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_SPAML0_UserArgs_MT64x64x64vjt7rCWSqTWTBm8neOgsWqGx-31ajltCOXKVYsQzKVY=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_sparse_emits_golden[spmm_vw_lg_one]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HHS_BH_SPAML0_A_S_UserArgs_MT256xBDfcwZTycXZZ3ndEHJ7FCfFmt0jFiGGHWRTJQKx-QeA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HHS_BH_SPAML0_A_S_UserArgs_MT256xJ3wisRBcE2gjdpnMRET48N7SUc5lVf2kWCxCj1mEVvU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HHS_BH_SPAML0_A_S_UserArgs_MT256xLJkx_ZESQPALRkr-L69xVtB21QNjkakW-7Hk5kbeD88=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HHS_BH_SPAML0_A_S_UserArgs_MT256xfw8fTUn7kojmX3zb7in8estJfTM3Jb9Vfahgtn-w624=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HHS_BH_SPAML0_A_S_UserArgs_MT256xjqxUqZwxR5y-Nb0DuXRUc5WwF51u0ky6ENyCKIK-SBs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HHS_BH_SPAML0_A_S_UserArgs_MT256xkzNi0vQQZ-9a8G_1q2HSmuQ79aXk3NXMUylInpH_-Rs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HHS_BH_SPAML0_A_S_UserArgs_MT256xnBSU4TtWgLE1AOQSlAVPdkK-NVQEytsDYsxWnD_P-dw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HHS_BH_SPAML0_A_S_UserArgs_MT256xo086VO3hG3g6EGmbxv2zyZuHhhGW5kJ_AvHe_ET4CA8=',
      'err': 0,
    }),
  ])
# ---
